...
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    Text(
                      _formType == FormType.register ? 'Уже есть аккаунт?' : 'Еще нет аккаунта? ',
                    ),
                    TextButton(
                      key: _formType == FormType.register ? const Key('goToLoginView') : const Key('goToRegisterView'),
                      child: RichText(
                        text: TextSpan(children: [
                          TextSpan(
                            text: _formType == FormType.register ? 'Войти' : 'Регистрация',
                          )
                        ], style: Theme.of(context).textTheme.bodyText1),
...
